--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -4,7 +4,7 @@
 {% block head %}
 <script src="/app/static/js/create_transaction.js"
         type="text/javascript"
-        charset="utf-8" async defer></script>
+        charset="utf-8" defer></script>
 {% endblock %}
 
 {% block content %}
