--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -15,23 +15,45 @@
     {% load repairs_form %}
 
             <div class="fieldWrapper">
-                <label class="control-label  " for="bike_type">Bike Type</label>
+                <label class="control-label  " for="bike_type">Transaction Type</label>
                 <select id="bike_type" class="form-control">
-                    <option value="customer_bike">Customer Bike</option>
-                    <option value="rental_bike">Rental Bike</option>
-                    <option value="refurbished_bike">Refurbished Bike</option>
+                    <option value="customer_bike">Customer</option>
+                    <option value="refurbished_bike">Refurbished Bike Maintenance</option>
+                    <option value="buy_back_bike">Buy-Back Bike Maintenance</option>
+                    <option value="rental_bike">Rental Bike Maintenance</option>
                 </select>
                 <br>
             </div>
             <div class="fieldWrapper">
-                    {{form.rental_vin | bootstrap}}
+                <b>Refurbished VIN</b>
+                <select id="refurbished_vin" name="refurbished_vin" class="form-control">
+                    <option></option>
+                    {% for refurbished_bike in refurbished_bikes %}
+                        <option value="{{refurbished_bike.vin}}">{{refurbished_bike.vin}}</option>
+                    {% endfor %}
+                </select>
             </div>
             <div class="fieldWrapper">
-                    {{form.refurbished_vin | bootstrap}}
+                <b>Rental VIN</b>
+                <select id="rental_vin" name="rental_vin" class="form-control">
+                    <option></option>
+                    {% for rental_bike in rental_bikes %}
+                        <option value="{{rental_bike.vin}}">{{rental_bike.vin}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="fieldWrapper">
+                <b>Buy-Back VIN</b>
+                <select id="buy_back_vin" name="buy_back_vin" class="form-control">
+                    <option></option>
+                    {% for buy_back_bike in buy_back_bikes %}
+                        <option value="{{buy_back_bike.vin}}">{{buy_back_bike.vin}}</option>
+                    {% endfor %}
+                </select>
             </div>
             {% for field in form %}
                 <div class="fieldWrapper">
-                    {% if field.name != 'rental_vin' and field.name != 'refurbished_vin' %}
+                    {% if field.name != 'rental_vin' and field.name != 'refurbished_vin' and field.name != 'buy_back_vin'%}
                         {{field | bootstrap}}
                     {% endif %}
                 </div>
