Made 5 requested changes and Fixed bug on Edit Page
1. Create Service Description upon "+"
2. Display (first two) tasks in service description
3. Add Order Parts form to email parts guy
4. Allow prices to be set/adjusted for tasks, accessories, and parts
5. Allow users to select front or rear for tasks on wheels and brakes

Bug on edit page: Had null reference error when posting buyback/ refurbished bike fields.
Fixed by checking if bike fk exists before processing fields, and changed edit page to
only display buy_back or refurbished once it has been assigned.

--- a/app/templates/app/assign_items.html
+++ b/app/templates/app/assign_items.html
@@ -38,13 +38,27 @@
                 {% with bool=tuple.1 %}
                     <div class="fieldWrapper">
                         <div class="form-group">
-                            <label class="control-label  " for="{{ item.name|join_whitespace }}">(${{ item.price }})  {{ item.name }}</label>
+                            <label class="control-label  " for="{{ item.name|join_whitespace }}">(${{ item.price }}) {{ item.name }}</label>
                             <div class=" ">
                                 <input class="form-control" id="{{ item.name|join_whitespace }}" name="task_{{item.name|join_whitespace}}" type="checkbox"
                                        {% if bool %} checked="checked "{% endif %}/>
                             </div>
 
                             {{ tuple.2 | bootstrap }}
+                            {% if tuple.3 == True or tuple.3 == False %}
+                                <select name="task_{{item.name|join_whitespace}}" class="form-control">
+                                    {% if tuple.3 == True %}
+                                    <option value="Front">Front</option>
+                                    {% endif %}
+
+                                    <option value="Rear">Rear</option>
+
+                                    {% if tuple.3 == False %}
+                                    <option value="Front">Front</option>
+                                    {% endif %}
+
+                                </select>
+                            {% endif %}
                         </div>
                     </div>
                 {% endwith %}
